Migrate UseCasesPorts to YourDomain.UseCases project

--- a/YourDomain.Presenters/YourDomain.Presenters.csproj
+++ b/YourDomain.Presenters/YourDomain.Presenters.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\YourDomain.UseCasesPorts\YourDomain.UseCasesPorts.csproj" />
+      <ProjectReference Include="..\YourDomain.UseCases\YourDomain.UseCases.csproj" />
     </ItemGroup>
 
 </Project>
