--- a/YourDomain.UseCases/YourDomain.UseCases.csproj
+++ b/YourDomain.UseCases/YourDomain.UseCases.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\YourDomain.DTOs\YourDomain.DTOs.csproj" />
       <ProjectReference Include="..\YourDomain.Repositories\YourDomain.Repositories.csproj" />
-      <ProjectReference Include="..\YourDomain.UseCasesPorts\YourDomain.UseCasesPorts.csproj" />
     </ItemGroup>
 
 </Project>
