Delete YourDomain.Repositories project

--- a/YourDomain.Model/YourDomain.Model.csproj
+++ b/YourDomain.Model/YourDomain.Model.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <Folder Include="Aggregates\" />
+      <Folder Include="Factories\" />
+      <Folder Include="Services\" />
       <Folder Include="ValueObjects\" />
     </ItemGroup>
 
