Add SeedWork.csproj reference to YourDomain.UseCases.csproj

--- a/YourDomain.UseCases/YourDomain.UseCases.csproj
+++ b/YourDomain.UseCases/YourDomain.UseCases.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SeedWork\SeedWork.csproj" />
       <ProjectReference Include="..\YourDomain.DTOs\YourDomain.DTOs.csproj" />
     </ItemGroup>
 
