Move Seedwork Reference from UseCases project to Model project

--- a/YourDomain.Model/YourDomain.Model.csproj
+++ b/YourDomain.Model/YourDomain.Model.csproj
@@ -13,4 +13,8 @@
       <Folder Include="ValueObjects\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SeedWork\SeedWork.csproj" />
+    </ItemGroup>
+
 </Project>
