Delete YourDomain.DTOs project and move DTOs to YourDomain.UseCases project

--- a/YourDomain.UseCases/YourDomain.UseCases.csproj
+++ b/YourDomain.UseCases/YourDomain.UseCases.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\YourDomain.DTOs\YourDomain.DTOs.csproj" />
+      <ProjectReference Include="..\YourDomain.Model\YourDomain.Model.csproj" />
     </ItemGroup>
 
 </Project>
