--- a/YourDomain.WebAPI/appsettings.json
+++ b/YourDomain.WebAPI/appsettings.json
@@ -5,8 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*", 
 	"ConnectionStrings": {
-		"YourEfDb": ""
+		"YourEfDb": "Server=localhost;Database=Testing;User Id=sa;Password=DevPassword123_;Encrypt=False"
+	},
+	"Cors": {
+		"Origins": [
+			"http://localhost:3000",
+			"http://localhost:4200",
+			"http://localhost:5173"
+		],
+		"Methods": [
+			"GET",
+			"POST",
+			"PUT",
+			"DELETE",
+			"OPTIONS",
+			"PATCH"
+		],
+		"Headers": [
+			"Authorization",
+			"Content-Type",
+			"Accept",
+			"Origin",
+			"X-Requested-With"
+		]
 	}
 }
