--- a/YourDomain.Model/YourDomain.Model.csproj
+++ b/YourDomain.Model/YourDomain.Model.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <Folder Include="Aggregates\" />
       <Folder Include="Factories\" />
+      <Folder Include="Services\Specifications\" />
       <Folder Include="ValueObjects\" />
     </ItemGroup>
 
