Rename solution structure and namespaces from `ExampleDomain` to `ArchitecturalGenerator`, update project references and file paths accordingly.

--- a/ArchitecturalGenerator.UseCases/ArchitecturalGenerator.UseCases.csproj
+++ b/ArchitecturalGenerator.UseCases/ArchitecturalGenerator.UseCases.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ExampleDomain.Model\ExampleDomain.Model.csproj" />
+      <ProjectReference Include="..\ArchitecturalGenerator.Model\ArchitecturalGenerator.Model.csproj" />
     </ItemGroup>
 
 </Project>
