Add Dotnet template installation feature
- Introduce `DotnetStatusService` to verify Dotnet availability.
- Add `UseCase` to handle Dotnet template installation from provided paths.
- Include `EmptyDto` and `ProjectTemplatesPathDto` to standardize input/output structures.
- Update project files and structure to support new functionality.

--- a/generator/ArchitecturalGenerator.UseCases/ArchitecturalGenerator.UseCases.csproj
+++ b/generator/ArchitecturalGenerator.UseCases/ArchitecturalGenerator.UseCases.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\ArchitecturalGenerator.Model\ArchitecturalGenerator.Model.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="CreateNewBaseSolution\" />
+    </ItemGroup>
+
 </Project>
