Add new folders and configure IoC for project templates use case
- Added support for new folder structure related to project templates.
- Registered `AddProjectTemplates.UseCase` in IoC with required domain port.

--- a/generator/ArchitecturalGenerator.UseCases/ArchitecturalGenerator.UseCases.csproj
+++ b/generator/ArchitecturalGenerator.UseCases/ArchitecturalGenerator.UseCases.csproj
@@ -11,7 +11,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="CreateNewBaseSolution\" />
+      <Folder Include="AddNewUseCase\" />
+      <Folder Include="CreateEfCoreProject\" />
+      <Folder Include="CreateIoCProject\" />
+      <Folder Include="CreateModelProject\" />
+      <Folder Include="CreateNewDomainProjects\" />
+      <Folder Include="CreateSeedWorkProject\" />
+      <Folder Include="CreateUseCasesProject\" />
+      <Folder Include="CreateWebApiProject\" />
+      <Folder Include="CreateWholeSolution\" />
     </ItemGroup>
 
 </Project>
